dist_man1_MANS=

if BUILD_GLBITCOIND
  dist_man1_MANS+=glbitcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoin-qt.1
endif

if BUILD_GLBITCOIN_CLI
  dist_man1_MANS+=glbitcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=bitcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=bitcoin-wallet.1
endif
endif
