dist_man1_MANS=

if BUILD_BITGLOBD
  dist_man1_MANS+=bitglobd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitglob-qt.1
endif

if BUILD_BITGLOB_CLI
  dist_man1_MANS+=bitglob-cli.1
endif

if BUILD_BITGLOB_TX
  dist_man1_MANS+=bitglob-tx.1
endif

if ENABLE_WALLET
if BUILD_BITGLOB_WALLET
  dist_man1_MANS+=bitglob-wallet.1
endif
endif
